--- a/java_Basics/.settings/org.eclipse.core.resources.prefs
+++ b/java_Basics/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//javacollections/List/Blueprint\ for\ List=UTF-8
 encoding//javacollections/map/blueprint\ of\ map=UTF-8
 encoding//javacollections/set/blueprint\ for\ set=UTF-8
+encoding//src/interview/RemoveDuplicates.java=UTF-8
